--- a/vite-project/src/widgets/BookingForm/styles/styles.css
+++ b/vite-project/src/widgets/BookingForm/styles/styles.css
@@ -1,9 +1,14 @@
 .booking-form-wrapper {
+    height: 100%;
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .booking-form {
     padding: 25px;
+    margin: auto;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.75);
     backdrop-filter: blur(10px);
